fix: responsive gap

--- a/reto1/styles.css
+++ b/reto1/styles.css
@@ -117,6 +117,7 @@ h1,h2,h3{
     display: flex;
     justify-content: space-around;
     margin: 40px 0;
+    gap:20px;
     flex-wrap: wrap;
     & h4 {
         max-width: 170px;
